--- a/AbramsBooks/AbramsBooks.html
+++ b/AbramsBooks/AbramsBooks.html
@@ -18,7 +18,14 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -28,98 +35,87 @@ Abrams, formerly Harry N. Abrams, Inc. (HNA), is an American publisher of art an
 </p><p>
 Titles
 </p><p>
-<li><a href="../BestWeCouldDo/BestWeCouldDo.html">The Best We Could Do</a> (2017)
-<li>Age of Selfishness: Ayn Rand, Morality, and the Financial Crisis (2015)
-<li>Apocalypse Taco (2019)
-<li>Art in Time: Unknown Comic Book Adventures, 1940-1980 (2010)
-<li>The Art of Daniel Clowes: Modern Cartoonist 2012
-<li>The Art of Harvey Kurtzman: The Mad Genius of Comics 2009
-<li>The Art of Jaime Hernandez: The Secrets of Life and Death 2010
-<li>Art Out of Time: Unknown Comics Visionaries, 1900-1969 (2006)
-<li>Auschwitz [b]	2003	1 issues (0 indexed)	Gallery	2003
-<li>Becoming Andy Warhol [b]	2016	1 issues (1 indexed)	Add	2016
-<li>Becoming Andy Warhol [b]	2018	1 issues (0 indexed)	Add	2018
-<li>The Best We Could Do [b]	2018	1 issues (1 indexed)	Gallery	2018
-<li>The Best We Could Do: An Illustrated Memoir [b]	2017	1 issues (0 indexed)	Add	2017
-<li>Bizarre Romance [b]	2018	1 issues (0 indexed)	Add	2018
-<li>The Bridge: How the Roeblings Connected Brooklyn to New York 2018
-<li>The Bridge: How the Roeblings Connected Brooklyn to New York 2019
-<li>The Carter Family Don't Forget This Song	2012	1 issues (1 indexed)	Add	2012
-<li>Cartoon America: Comic Art in the Library of Congress [b]	2006	1 issues (0 indexed)	Have 1 (Need 1)	2006
-<li>Child's Play [b]	2008	1 issues (1 indexed)	Gallery	2008
-<li>Climate Changed: A Personal Journey through the Science [b]	2014	1 issues (0 indexed)	Add	2014
-<li>The Comics Before 1945 [b]	2004	1 issues (1 indexed)	Gallery	2004
-<li>The Comics: The Complete Collection [b]	2008	1 issues (0 indexed)	Gallery	2008
-<li>Commute: An Illustrated Memoir of Female Shame [b]	2019	1 issues (0 indexed)	Add	2019
-<li>Diary of an Awesome Friendly Kid: Rowley Jefferson's Journal [b]	2019	1 issues (0 indexed)	No Covers	2019
-<li>Drawing Power: Women's Stories of Sexual Violence, Harassment, and Survival: A Comics Anthology [b]	2019	1 issues (0 indexed)	Gallery	2019
-<li>Dread &amp; Superficiality: Woody Allen as Comic Strip [b]	2009	1 issues (1 indexed)	Gallery	October 2009
-<li>Earth Before Us [b]	2017	3 issues (0 indexed)	Add	2017 - Present
-<li>Economix	2012	1 issues (1 indexed)	Add	[September] 2012
-<li>El Deafo [b]	2014	1 issues (1 indexed)	Add	[September] 2014
-<li>Empire State [b]	2011	1 issues (1 indexed)	Gallery	2011
-<li>Explorer: The Hidden Doors [b]	2014	1 issues (1 indexed)	Gallery	2014
-<li>Explorer: The Lost Islands [b]	2013	1 issues (1 indexed)	Gallery	2013
-<li>Explorer: The Lost Islands [b]	2013	1 issues (0 indexed)	Have 1 (Need 1)	2013
-<li>Explorer: The Mystery Boxes [b]	2012	1 issues (1 indexed)	Gallery	2012
-<li>The Faithful Spy: Dietrich Bonhoeffer and the Plot to Kill Hitler [b]	2018	1 issues (0 indexed)	Gallery	2018
-<li>A Fire Story [b]	2019	1 issues (0 indexed)	Gallery	2019
-<li>Ghetto Klown [b]	2015	1 issues (1 indexed)	Gallery	[October] 2015
-<li>Hereville [b]	2010	3 issues (3 indexed)	Have 3 (Need 1)	[November] 2010 - Present
-<li>The Horror! The Horror! Comic Books the Government Didn't Want You to Read!	2010	1 issues (1 indexed)	No Covers	November 2010
-<li>How to Fake a Moon Landing: Exposing the Myths of Science Denial [b]	2013	1 issues (1 indexed)	Gallery	2013
-<li>The Imitation Game: Alan Turing Decoded [b]	2016	1 issues (1 indexed)	Gallery	2016
-<li>The Imitation Game: Alan Turing Decoded [b]	2019	1 issues (0 indexed)	Gallery	2019
-<li>Irmina	2016	1 issues (0 indexed)	Add	2016
-<li>Johnny Cash: I See a Darkness	2009	1 issues (0 indexed)	Gallery	2009
-<li>Just So Happens [b]	2015	1 issues (1 indexed)	Gallery	2015
-<li>Krazy Kat: The Comic Art of George Herriman [b]	1986	1 issues (0 indexed)	Add	1986
-<li>Krazy Kat: The Comic Art of George Herriman [b]	1986	1 issues (1 indexed)	Gallery	1986
-<li>The Laugh-Out-Loud Cats Sell Out [b]	2009	1 issues (0 indexed)	Add	2009
-<li>M [b]	2008	1 issues (1 indexed)	Gallery	2008
-<li>Manga Shakespeare Romeo and Juliet	2007	1 issues (1 indexed)	Gallery	[April] 2007
-<li>Mars Attacks: 50th Anniversary Collection [b]	2012	1 issues (0 indexed)	No Covers	2012
-<li>Marvel: Five Fabulous Decades of the World's Greatest Comics [b]	1991	1 issues (1 indexed)	No Covers	1991
-<li>Meanwhile [b]	2010	1 issues (1 indexed)	Gallery	2010
-<li>The Misadventures of Salem Hyde [b]	2013	1 issues (0 indexed)	Gallery	2013
-<li>Mom's Cancer [b]	2006	1 issues (1 indexed)	Gallery	2006
-<li>Mother Goose on the Loose [b]	2003	1 issues (0 indexed)	Gallery	2003
-<li>My Friend Dahmer	2012	1 issues (1 indexed)	Gallery	2012
-<li>Nat Turner [b]	2008	1 issues (1 indexed)	Add	2008
-<li>Nathan Hale's Hazardous Tales [b]	2012	9 issues (8 indexed)	Have 8 (Need 3)	2012 - Present
-<li>Nobody's Fool: The Life and Times of Schlitzie the Pinhead [b]	2019	1 issues (0 indexed)	Gallery	[March] 2019
-<li>Octavia E. Butler's Kindred: A Graphic Novel Adaptation [b]	2017	1 issues (1 indexed)	Add	2017
-<li>Octavia E. Butler's Kindred: A Graphic Novel Adaptation [b]	2018	1 issues (0 indexed)	Add	2018
-<li>An Olympic Dream - The Story Of Samia Yusuf Omar	2016	1 issues (0 indexed)	Add	2016
-<li>One Trick Pony [b]	2017	1 issues (0 indexed)	Gallery	2017
-<li>One Trick Pony [b]	2018	1 issues (0 indexed)	Add	2018
-<li>Page by Paige [b]	2011	1 issues (1 indexed)	Have 1 (Need 1)	2011
-<li>Page by Paige [b]	2011	1 issues (0 indexed)	Add	2011
-<li>PS Magazine: The Best of the Preventive Maintenance Monthly [b]	2011	1 issues (0 indexed)	Gallery	2011
-<li>The Red Zone: An Earthquake Story [b]	2019	1 issues (0 indexed)	Add	2019
-<li>Red's Planet [b]	2016	2 issues (0 indexed)	Add	2016 - Present
-<li>Red's Planet [b]	2016	2 issues (0 indexed)	Have 1 (Need 1)	2016 - Present
-<li>Rutabaga the Adventure Chef [b]	2015	2 issues (2 indexed)	Gallery	2015 - 2016
-<li>Showtime at the Apollo: The Epic Tale of Harlem’s Legendary Theater [b]	2019	1 issues (0 indexed)	Add	2019
-<li>The Simpsons/Futurama Crossover Crisis [b]	2010	1 issues (0 indexed)	Gallery	2010
-<li>Sing No Evil [b]	2014	1 issues (0 indexed)	Add	2014
-<li>The Someday Funnies [a]	2011	1 issues (0 indexed)	Add	2011
-<li>Spongebob Comics [b]	2017	3 issues (0 indexed)	Add	2017 ? - 2017 ?
-<li>Spongebob Comics Treasure Chest [b]	2018	1 issues (0 indexed)	Add	2018
-<li>Storyteller Without Words: The Wood Engravings of Lynd Ward [b]	1974	1 issues (1 indexed)	Gallery	1974
-<li>Tall Tales [b]	2008	1 issues (0 indexed)	Add	2008
-<li>The Toon Treasury of Classic Children's Comics [b]	2009	1 issues (1 indexed)	Gallery	[September] 2009
-<li>Trashed [b]	2015	1 issues (1 indexed)	Gallery	2015
-<li>Underground Classics: The Transformation of Comics into Comix [b]	2009	1 issues (0 indexed)	No Covers	2009
-<li>Undocumented A Worker's Fight	2018	1 issues (0 indexed)	Add	2018
-<li>Voyage into the Deep [b]	2004	1 issues (0 indexed)	Gallery	2004
-<li>The Warren Commission Report: A Graphic Investigation into the Kennedy Assassination [b]	2014	1 issues (0 indexed)	Add	2014
-<li>What Would Satan Do? [b]	2005	1 issues (1 indexed)	Gallery	2005
-<li>Whatever Happened to the World of Tomorrow? [b]	2009	1 issues (0 indexed)	Add	July 2009
-<li>Whatever Happened to the World of Tomorrow? [b]	2012	1 issues (0 indexed)	Add	August 2012
-<li>Will &amp; Whit [b]	2013	1 issues (1 indexed)	Gallery	2013
-<li>Yiddishkeit: Jewish Vernacular and the New Land [b]	2011	1 issues (1 indexed)	Gallery	2011
-<li></p>
+<li><a href="AbramsBooks1.jpg">Age of Selfishness: Ayn Rand, Morality, and the Financial Crisis</a> (2015)
+<li><a href="AbramsBooks2.jpg">Apocalypse Taco</a> (2019)
+<li><a href="AbramsBooks3.jpg">Art in Time: Unknown Comic Book Adventures, 1940-1980</a> (2010)
+<li><a href="AbramsBooks4.jpg">Art of Daniel Clowes: Modern Cartoonist</a> (2012)
+<li><a href="AbramsBooks5.jpg">Art of Harvey Kurtzman: The Mad Genius of Comics</a> (2009)
+<li><a href="AbramsBooks6.jpg">Art of Jaime Hernandez: The Secrets of Life and Death</a> (2010)
+<li><a href="AbramsBooks7.jpg">Art Out of Time: Unknown Comics Visionaries, 1900-1969</a> (2006)
+<li>Auschwitz (2003)
+<li>Becoming Andy Warhol (2016)
+<li><a href="../BestWeCouldDo/BestWeCouldDo.html">Best We Could Do</a> (2017)
+<li>Bizarre Romance (2018)
+<li>Bridge: How the Roeblings Connected Brooklyn to New York (2018)
+<li>Carter Family Don't Forget This Song (2012)
+<li>Cartoon America: Comic Art in the Library of Congress (2006)
+<li>Child's Play (2008)
+<li>Climate Changed: A Personal Journey through the Science (2014)
+<li>Comics Before 1945 (2004)
+<li>Comics: The Complete Collection (2008)
+<li>Commute: An Illustrated Memoir of Female Shame (2019)
+<li>Diary of an Awesome Friendly Kid: Rowley Jefferson's Journal (2019)
+<li>Drawing Power: Women's Stories of Sexual Violence, Harassment, and Survival: A Comics Anthology (2019)
+<li>Dread &amp; Superficiality: Woody Allen as Comic Strip (2009)
+<li>Earth Before Us (2017)
+<li>Economix (2012)	
+<li>El Deafo (2014)
+<li>Empire State (2011)
+<li>Explorer: The Hidden Doors (2014)
+<li>Explorer: The Lost Islands (2013)
+<li>Explorer: The Mystery Boxes (2012)
+<li>Faithful Spy: Dietrich Bonhoeffer and the Plot to Kill Hitler (2018)
+<li>Fire Story (2019)
+<li>Ghetto Klown (2015)
+<li>Hereville (2010)
+<li>Horror! The Horror! Comic Books the Government Didn't Want You to Read!	(2010)
+<li>How to Fake a Moon Landing: Exposing the Myths of Science Denial (2013)
+<li>Imitation Game: Alan Turing Decoded (2016)
+<li>Irmina	(2016)
+<li>Johnny Cash: I See a Darkness	(2009)
+<li>Just So Happens (2015)
+<li><a href="Kirby.jpg">Kirby: King of Comics</a> (2008)
+<li>Krazy Kat: The Comic Art of George Herriman (1986)
+<li>Laugh-Out-Loud Cats Sell Out (2009)
+<li>M (2008)
+<li>Manga Shakespeare Romeo and Juliet	(2007)
+<li>Mars Attacks: 50th Anniversary Collection (2012)
+<li>Marvel: Five Fabulous Decades of the World's Greatest Comics (1991)
+<li>Meanwhile (2010)
+<li>Misadventures of Salem Hyde (2013)
+<li>Mom's Cancer (2006)
+<li>Mother Goose on the Loose (2003)
+<li>My Friend Dahmer (2012)
+<li>Nat Turner	(2008)
+<li>Nathan Hale's Hazardous Tales (2012)
+<li>Nobody's Fool: The Life and Times of Schlitzie the Pinhead (2019)
+<li>Octavia E. Butler's Kindred: A Graphic Novel Adaptation (2017)
+<li>An Olympic Dream - The Story Of Samia Yusuf Omar (2016)
+<li>One Trick Pony (2017)
+<li>Page by Paige (2011)
+<li>PS Magazine: The Best of the Preventive Maintenance Monthly (2011)
+<li>Red Zone: An Earthquake Story	(2019)
+<li>Red's Planet (2016)
+<li>Rutabaga the Adventure Chef (2015)
+<li>Showtime at the Apollo: The Epic Tale of Harlem’s Legendary Theater (2019)
+<li>Simpsons/Futurama Crossover Crisis (2010)
+<li>Sing No Evil (2014)
+<li>Someday Funnies (2011)
+<li>Spongebob Comics (2017)
+<li>Spongebob Comics Treasure Chest (2018)
+<li>Storyteller Without Words: The Wood Engravings of Lynd Ward (1974)
+<li>Tall Tales	(2008)
+<li>Toon Treasury of Classic Children's Comics (2009)
+<li>Trashed (2015)
+<li>Underground Classics: The Transformation of Comics into Comix (2009)
+<li>Undocumented A Worker's Fight (2018)
+<li>Voyage into the Deep (2004)
+<li>Warren Commission Report: A Graphic Investigation into the Kennedy Assassination (2014)
+<li>What Would Satan Do? (2005)
+<li>Whatever Happened to the World of Tomorrow? (2009)
+<li>Will &amp; Whit (2013)
+<li>Yiddishkeit: Jewish Vernacular and the New Land (2011)
+</p>
 
 </body>
 </html>
