--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -12,7 +12,7 @@
 <p>
 IDW Publishing is an American publisher of comic books, graphic novels, art books, and comic strip collections. It was founded in 1999 as the publishing division of Idea and Design Works, LLC (IDW), itself formed in 1999, and is regularly recognized as the fifth-largest comic book publisher in the United States, behind Marvel, DC, Dark Horse, and Image Comics. The company is perhaps best known for its licensed comic book adaptations of movies, television shows, and cartoons.
 </p><p>
-Top Shelf Productions is an American publishing company founded in 1997, originally owned and operated by Chris Staros and Brett Warnock and a small staff. Now an imprint of IDW Publishing, Top Shelf is based in Marietta, Georgia. Top Shelf publishes comics and graphic novels by authors such as Alan Moore, Craig Thompson, James Kochalka, Andy Runton, Jeffrey Brown, Nate Powell, Eddie Campbell, Alex Robinson, Jeff Lemire, and Matt Kindt.
+<a href="../TopShelf/TopShelf.html">Top Shelf Productions</a> is an American publishing company founded in 1997, originally owned and operated by Chris Staros and Brett Warnock and a small staff. Now an imprint of IDW Publishing, Top Shelf is based in Marietta, Georgia. Top Shelf publishes comics and graphic novels by authors such as Alan Moore, Craig Thompson, James Kochalka, Andy Runton, Jeffrey Brown, Nate Powell, Eddie Campbell, Alex Robinson, Jeff Lemire, and Matt Kindt.
 </p><p>
 Idea and Design Works (IDW) was formed in 1999 by a group of comic book managers and artists that met at Wildstorm Productions included Ted Adams, Robbie Robbins, Alex Garner, and Kris Oprisko for an outsource art and graphic design firm.
 </p><p>
@@ -324,7 +324,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>That Hell-Bound Train 		
 <li>Tilting at Windmills 		
 <li>Tommyrot: The Art of Ben Templesmith 		
-<li><a href="../Transformers/Transformers.html">Transformers</a> 	#1–31 	November 2009 – December 2011 	
+<li><a href="../Transformers/Transformers.html">Transformers</a> (2009) 	
 <li>Tres Fanta: Even More Art of Ashley Wood 		
 <li>True Blood 	#1–6 	July – December 2010 
 <li>True Blood: Tainted Love 	#1–6 	February – July 2011 
