--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
 </tr>
 
 <tr>
+<td>47 North</td>
+<td>2013</td>
+<td>Publisher</td>
+<td><a href="47North/47North.html">Details</a></td>
+</tr>
+
+<tr>
 <td>47 Ronin</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -9256,6 +9263,13 @@
 </tr>
 
 <tr>
+<td>Jet City Comics</td>
+<td>2011</td>
+<td>Publisher</td>
+<td><a href="47North/47North.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jim Henson Company</td>
 <td>1954</td>
 <td>Publisher</td>
@@ -9652,6 +9666,13 @@
 <td>1951</td>
 <td>Publisher</td>
 <td><a href="StanleyMorse/StanleyMorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Keyhole</td>
+<td>1996</td>
+<td>Millenium</td>
+<td><a href="Keyhole/Keyhole.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10635,6 +10656,13 @@
 </tr>
 
 <tr>
+<td>Manga! Manga! The World of Japanese Comics</td>
+<td>1983</td>
+<td>Kodansha</td>
+<td><a href="MangaManga/MangaManga.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Manhattan Projects</td>
 <td>2012</td>
 <td>Image</td>
@@ -11577,6 +11605,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="MilkmanMurders/MilkmanMurders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Millennium Publications</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="MillenniumPublications/MillenniumPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15438,6 +15473,13 @@
 </tr>
 
 <tr>
+<td>Steampunk</td>
+<td>2000</td>
+<td>Cliffhanger</td>
+<td><a href="Steampunk/Steampunk.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Steelgrip Starkey</td>
 <td>1986</td>
 <td>Epic</td>
@@ -16309,7 +16351,7 @@
 <td>Top Shelf</td>
 <td>1997</td>
 <td>Publisher</td>
-<td><a href="IDW/IDW.html">Details</a></td>
+<td><a href="TopShelf/TopShelf.html">Details</a></td>
 </tr>
 
 <tr>
