--- a/index.html
+++ b/index.html
@@ -6067,6 +6067,13 @@
 </tr>
 
 <tr>
+<td>Ed Piskor</td>
+<td>1982</td>
+<td>Creator</td>
+<td><a href="EdPiskor/EdPiskor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eddas</td>
 <td>1220</td>
 <td>Antiquity</td>
@@ -17690,6 +17697,13 @@
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="XmenDaysOfFuturePast/XmenDaysOfFuturePast.html">Details</a></td>
+</tr>
+
+<tr>
+<td>X-Men Grand Design</td>
+<td>2018</td>
+<td>Marvel</td>
+<td><a href="XmenGrandDesign/XmenGrandDesign.html">Details</a></td>
 </tr>
 
 <tr>
