--- a/slideshow.html
+++ b/slideshow.html
@@ -3372,7 +3372,7 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Books/OfMagic/BooksOfMagic1994_08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_08.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_09.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagic/BooksOfMagic1994_11.jpg"></div>
@@ -3396,12 +3396,12 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime/BooksOfMagicLifeWartime13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime/BooksOfMagicLifeWartime14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime/BooksOfMagicLifeWartime15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Boom/Boom1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Boom/Boom2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Boom/Boom3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Boom/Boom4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Boom/Boom5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Boom/Boom6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Boom!/Boom1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Boom!/Boom2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Boom!/Boom3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Boom!/Boom4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Boom!/Boom5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Boom!/Boom6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BorisVallejo/BorisVallejo01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BorisVallejo/BorisVallejo02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BorisVallejo/BorisVallejo03.jpg"></div>
