New York City Outlaws

--- a/index.html
+++ b/index.html
@@ -12413,6 +12413,13 @@
 </tr>
 
 <tr>
+<td>New York City Outlaws</td>
+<td>1984</td>
+<td>Outlaw Comics</td>
+<td><a href="NewYorkCityOutlaws/NewYorkCityOutlaws.html">Details</a></td>
+</tr>
+
+<tr>
 <td>New Yorker</td>
 <td>1925</td>
 <td>Advance</td>
