--- a/index.html
+++ b/index.html
@@ -6857,6 +6857,13 @@
 <td>1985</td>
 <td>Fishwrap</td>
 <td><a href="FishPolice/FishPolice.html">Details</a></td>
+
+</tr>
+<tr>
+<td>Flaming Carrot Comics</td>
+<td>1981</td>
+<td>Kilian Barracks</td>
+<td><a href="FlamingCarrot/FlamingCarrot.html">Details</a></td>
 </tr>
 
 <tr>
