--- a/index.html
+++ b/index.html
@@ -14668,6 +14668,13 @@
 </tr>
 
 <tr>
+<td>Shintaro Kago</td>
+<td>1969</td>
+<td>Creator</td>
+<td><a href="ShintaroKago/ShintaroKago.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ship Ahoy</td>
 <td>1944</td>
 <td>Spotlight</td>
