--- a/NorthstarPublishing/NorthstarPublishing.html
+++ b/NorthstarPublishing/NorthstarPublishing.html
@@ -38,7 +38,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Originally owned by Dan Madsen, the company was purchased in the early 1990s by Andrew Rev, who also bought the assets of the bankrupt Comico around that time.
+Originally owned by Dan Madsen, the company was purchased in the early 1990s by Andrew Rev, who also bought the assets of the bankrupt Comico around that time. <a href="../RebelStudios/RebelStudios.html">Rebel Studios</a> is an imprint of Northstar.
 </p><p>
 Titles
 </p><p>
@@ -54,7 +54,7 @@ Titles
 <li><a href="Northstar10.jpg">Cold Blooded</a> (1993)
 <li><a href="Northstar11.jpg">Cold Blooded: The Burning Kiss</a> (1993)
 <li><a href="Northstar12.jpg">Cold Blooded: The Slayer</a> (1995)
-<li><a href="../Faust/Faust1.jpg">Faust</a> (1989)
+<li><a href="../Faust/Faust.html">Faust</a> (1989)
 <li><a href="Northstar14.jpg">Fritz Whistle</a> (1992)
 <li><a href="Northstar15.jpg">Horror: The Illustrated Book of Fears</a> (1989)
 <li>The Hunting (1993)
