--- a/index.html
+++ b/index.html
@@ -13667,6 +13667,13 @@
 </tr>
 
 <tr>
+<td>Rebel Studios</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="RebelStudios/RebelStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Dwarf</td>
 <td>1988</td>
 <td>BBC</td>
@@ -16513,6 +16520,13 @@
 <td>2003</td>
 <td>Marvel</td>
 <td><a href="TruthRedWhiteBlack/TruthRedWhiteBlack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tundra UK</td>
+<td>1992</td>
+<td>Publisher</td>
+<td><a href="TundraUK/TundraUK.html">Details</a></td>
 </tr>
 
 <tr>
