--- a/index.html
+++ b/index.html
@@ -4266,6 +4266,13 @@
 </tr>
 
 <tr>
+<td>Comico</td>
+<td>1982</td>
+<td>Publisher</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics' Greatest World: Barb Wire</td>
 <td>1993</td>
 <td>Dark Horse</td>
