--- a/MirageStudios/MirageStudios.html
+++ b/MirageStudios/MirageStudios.html
@@ -18,7 +18,17 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,15 +40,15 @@ On October 21, 2009 it was announced that Viacom had purchased all of Mirage's r
 </p><p>
 Titles
 </p><p>
-<li>Bade Biker &amp; Orson
-<li>Barabbas
-<li>Bioneers
-<li>Commandosaurs
-<li>Dino Island
-<li>Fugitoid
-<li>Gizmo 
-<li>Gobbledygook
-<li>Grunts
+<li>Bade Biker &amp; Orson (1986)
+<li>Bioneers (1994)
+<li>Casey Jones (1994)
+<li>Commandosaurs (1994)
+<li>Dino Island (1993)
+<li>Fugitoid (1985)
+<li>Gizmo (1986)
+<li>Gobbledygook (1986)
+<li>Grunts (1987)
 <li>Gutwallow
 <li>Hallowieners: Invasion of the Halloween Hot Dogs
 <li>Hero Sandwich
