--- a/Fawcett/Fawcett.html
+++ b/Fawcett/Fawcett.html
@@ -8,8 +8,34 @@
 </head>
 
 <body>
-<h1>Fawcett Comics</h1>
+<img src="Fawcett1.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Fawcett1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett13.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Fawcett Publications was an American publishing company founded in 1919 in Robbinsdale, Minnesota by Wilford Hamilton "Captain Billy" Fawcett (1885–1940). It kicked off with the publication of the bawdy humor magazine Captain Billy's Whiz Bang and expanded into a magazine empire with the first issue of Mechanix Illustrated in the 1920s, followed by numerous titles including True Confessions, Family Circle, Woman's Day, and True. Fawcett Comics, which began operating in 1939, led to the introduction of Captain Marvel. The company became a publisher of paperbacks in 1950 with the opening of Gold Medal Books.
 </p><p>
 In 1953, the company abandoned its roster of superhero comic characters in the wake of declining sales and a lawsuit for infringement by the Captain Marvel character on the copyright of the Action Comics character Superman, and ended its publication of comic books. It was purchased by CBS Publications in 1977 and subsequently underwent dismantling and absorption by other companies.
