--- a/index.html
+++ b/index.html
@@ -13926,6 +13926,13 @@
 </tr>
 
 <tr>
+<td>Rob Liefeld</td>
+<td>1967</td>
+<td>Creator</td>
+<td><a href="RobLiefeld/RobLiefeld.html">Details</td>
+</tr>
+
+<tr>
 <td>Robert Anton Wilson</td>
 <td>1932</td>
 <td>Creator</td>
@@ -17476,10 +17483,10 @@
 </tr>
 
 <tr>
-<td>William Shatner's TekWar</td>
-<td>1995</td>
-<td>Epic</td>
-<td><a href="WilliamShatnerTekWar/WilliamShatnerTekWar.html">Details</a></td>
+<td>William Burroughs</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="WilliamBurroughs/WilliamBurroughs.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17487,6 +17494,13 @@
 <td>1922</td>
 <td>Creator</td>
 <td><a href="BillGaines/BillGaines.html">Details</a></td>
+</tr>
+
+<tr>
+<td>William Shatner's TekWar</td>
+<td>1995</td>
+<td>Epic</td>
+<td><a href="WilliamShatnerTekWar/WilliamShatnerTekWar.html">Details</a></td>
 </tr>
 
 <tr>
