--- a/DanielClowes/DanielClowes.html
+++ b/DanielClowes/DanielClowes.html
@@ -25,6 +25,14 @@
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
