--- a/DanielClowes/DanielClowes.html
+++ b/DanielClowes/DanielClowes.html
@@ -41,6 +41,72 @@
 Daniel Gillespie Clowes (born April 14, 1961) is an American cartoonist, graphic novelist, illustrator, and screenwriter. Most of Clowes's work first appeared in Eightball, a solo anthology comic book series. An Eightball issue typically contained several short pieces and a chapter of a longer narrative that was later collected and published as a graphic novel, such as Like a Velvet Glove Cast in Iron (1993), Ghost World (1997), and David Boring (2000). 
 </p><p>
 Clowes's illustrations have appeared in The New Yorker, Newsweek, Vogue, The Village Voice, and elsewhere. With filmmaker Terry Zwigoff, Clowes adapted Ghost World into a 2001 film and another Eightball story into the 2006 film, Art School Confidential. Clowes's comics, graphic novels, and films have received numerous awards, including a Pen Award for Outstanding Work in Graphic Literature, over a dozen Harvey and Eisner Awards, and an Academy Award nomination.
+</p><p>
+Series
+<ul>
+<li><a href="../LloydLlewellyn/LloydLlewellyn.html">Lloyd Llewellyn</a> #1–6 (1986–1987) and a special (1988).
+<li><a href="../Eightball/Eightball.html">Eightball</a> #1–23 (1989–2004).
+</ul>
+Graphic novels
+<ul>
+<li><a href="DanielClowes11.jpg">Like a Velvet Glove Cast in Iron</a> (1993)
+<li>Pussey!: The Complete Saga of Young Dan Pussey (1995)
+<li><a href="../GhostWorld/GhostWorld.html">Ghost World</a> (1997)
+<li>David Boring (2000)
+<li>Ice Haven (2005)
+<li><a href="DanielClowes02.jpg">Wilson</a> (2010)
+<li>Mister Wonderful (2011)
+<li><a href="DanielClowes03.jpg">The Death-Ray</a> (2011)
+<li>Patience (2016)
+</ul>
+Anthologies
+<ul>
+<li><a href="../LloydLlewellyn/LloydLlewellyn.html">#$@&!: The Official Lloyd Llewellyn Collection</a> (1989)
+<li>    Lout Rampage! (1991)
+<li>    The Manly World of Lloyd Llewellyn: A Golden Treasury of His Complete Works (1994)
+<li>    Orgy Bound (1996) 
+<li>    Caricature (1998)
+<li>    Twentieth Century Eightball (2002) 
+<li><a href="../GhostWorld/GhostWorld.html">Ghost World: Special Edition</a> (2008)
+<li><a href="../Eightball/Eightball.html">The Complete Eightball</a>, #1–#18 (2015)
+</ul>
+Other appearances
+<ul>
+    "Justin M. Damiano" in The Book of Other People (2008)
+</ul>
+Movies
+<ul>
+<li>Ghost World (2001)
+<li>Art School Confidential (2006)
+<li>Wilson (2017)
+</ul>
+
+Miscellaneous
+<ul>
+<li>    Cracked – recurring strip "The Uggly Family" (1986–1989)
+<li>    Thee Headcoats – Heavens To Murgatroyd, Even! It's Thee Headcoats! (1990)
+<li>    Santa Cruz Skateboards – Corey O'Brien full-color deck (1991)
+<li>    National Lampoon – series of one-page strips (1991)
+<li>    Urge Overkill – The Supersonic Storybook cover (1991)
+<li>    The Supersuckers – The Smoke of Hell cover (1992)
+<li>    Eightball postcard set (1993)
+<li>    "Boredom" – a mock board game (1994)
+<li>    The John Peel Sub Pop Sessions cover (1994)
+<li>    Ghost World: A Screenplay (2001)
+<li>    Little Enid Doll (2001–2002)
+<li>    Enid & Rebecca Cloth Dolls (2002)
+<li>    Yo La Tengo – Merry Christmas from Yo La Tengo cover (2002)
+<li>    Enid Hi-Fashion Glamour Doll (2004)
+<li>    Pogeybait Doll (2006)
+<li>    Art School Confidential: A Screenplay (2006)
+<li>    The New Yorker cover (May 24, 2010)
+<li>    Dan DeBono's Indy – created original cover and interviewed
+</ul>
+Commercial work
+<ul>
+<li>OK Soda – Clowes was one of the main illustrators for OK Soda cans and print materials, along with fellow Fantagraphics artist Charles Burns.
+</ul>
 </p>
+
 </body>
 </html>
