--- a/index.html
+++ b/index.html
@@ -7522,7 +7522,7 @@
 <td>Ghost World</td>
 <td>1993</td>
 <td>Fantagraphics</td>
-<td><a href="GhostWorld/Ghostworld.html">Details</a></td>
+<td><a href="GhostWorld/GhostWorld.html">Details</a></td>
 </tr>
 
 <tr>
