--- a/DanielClowes/DanielClowes.html
+++ b/DanielClowes/DanielClowes.html
@@ -33,6 +33,12 @@
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -50,14 +56,14 @@ Series
 Graphic novels
 <ul>
 <li><a href="DanielClowes11.jpg">Like a Velvet Glove Cast in Iron</a> (1993)
-<li>Pussey!: The Complete Saga of Young Dan Pussey (1995)
+<li><a href="DanielClowes15.jpg">Pussey!: The Complete Saga of Young Dan Pussey</a> (1995)
 <li><a href="../GhostWorld/GhostWorld.html">Ghost World</a> (1997)
-<li>David Boring (2000)
-<li>Ice Haven (2005)
+<li><a href="DanielClowes16.jpg">David Boring</a> (2000)
+<li><a href="DanielClowes17.jpg">Ice Haven</a> (2005)
 <li><a href="DanielClowes02.jpg">Wilson</a> (2010)
-<li>Mister Wonderful (2011)
+<li><a href="DanielClowes18.jpg">Mister Wonderful (2011)
 <li><a href="DanielClowes03.jpg">The Death-Ray</a> (2011)
-<li>Patience (2016)
+<li><a href="DanielClowes19.jpg">Patience</a> (2016)
 </ul>
 Anthologies
 <ul>
@@ -99,7 +105,7 @@ Miscellaneous
 <li>    Enid Hi-Fashion Glamour Doll (2004)
 <li>    Pogeybait Doll (2006)
 <li>    Art School Confidential: A Screenplay (2006)
-<li>    The New Yorker cover (May 24, 2010)
+<li><a href="../NewYorker/NewYorker.html">The New Yorker</a> (May 24, 2010)
 <li>    Dan DeBono's Indy – created original cover and interviewed
 </ul>
 Commercial work
