--- a/index.html
+++ b/index.html
@@ -8976,6 +8976,13 @@
 </tr>
 
 <tr>
+<td>Intruder Comics</td>
+<td>2016</td>
+<td>Publisher</td>
+<td><a href="IntruderComics/IntruderComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Invaders</td>
 <td>1975</td>
 <td>Marvel</td>
